# crud-generator

./: .gitignore  Cargo.toml  README.md  ressource_example.json
src/: main.rs
src/generators/: files.rs  migration.rs  mod.rs  pivot.rs
src/models/: field.rs  mod.rs  relation.rs  resource.rs
src/utils/: file.rs  mod.rs  template.rs
templates/: handler.rs.tera  manager.rs.tera  migration.rs.tera  model.rs.tera  payloads.rs.tera  pivot_model.rs.tera  relation.rs.tera  repository.rs.tera  test.rs.tera
