[package]
name = "crud-generator"
version = "0.1.6"
edition = "2021"
description = "A Rust tool to generate CRUD files for an HTTP API"
repository = "https://github.com/morning-la-tech/crud-generator"
license = "MIT"
categories = ["web-programming", "template-engine", "development-tools"]
keywords = ["crud", "codegen", "database", "seaorm"]

[dependencies]
Inflector = "0.11.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.17"
inquire = "0.7.5"

[[bin]]
name = "crud-generator"
path = "src/main.rs"
